@@ -4,7 +4,6 @@ plugins {
     id 'com.adarshr.test-logger' version '4.0.0'
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
-    id 'org.beryx.jlink' version '2.24.4'
 
 }
 
@@ -44,7 +43,7 @@ jar {
 
 javafx {
     version = "${javafxVersion}"
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.base']
 }
 
 
@@ -75,13 +74,6 @@ dependencies {
 }
 
 
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'my-application'
-        jvmArgs = ['-Dprism.order=sw']
-    }
-}
 
 
 test {
@@ -98,6 +90,7 @@ compileJava {
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls',
                 '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.base',
                 '--add-modules', 'org.json'
         ]
         classpath = files()
@@ -109,6 +102,8 @@ run{
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls',
                 '--add-modules', 'javafx.fxml',
+                '--add-modules', 'javafx.base',
+                '--add-modules', 'org.json'
         ]
     }
 }
